--- a/src/package.json
+++ b/src/package.json
@@ -17,10 +17,16 @@
   },
   "homepage": "https://github.com/PeekEmbrace/scorpi-bike#readme",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
     "browser-sync": "^2.27.7",
     "gulp": "^3.9.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
-    "gulp-sass": "^5.0.0"
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
     "sass": "^1.43.4"
