--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier-fix": "npx prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,8 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "prettier": "2.4.1"
   },
   "dependencies": {
     "sass": "^1.43.4"
