--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier-fix": "npx prettier --write ."
+    "prettier-fix": "npx prettier --write .",
+    "prepare": "cd .. && husky install"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,9 @@
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "prettier": "2.4.1"
+    "husky": "^7.0.0",
+    "prettier": "2.4.1",
+    "pretty-quick": "^3.1.2"
   },
   "dependencies": {
     "sass": "^1.43.4"
