--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "browser-sync": "^2.27.7",
+    "eslint": "^8.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
