--- a/src/package.json
+++ b/src/package.json
@@ -31,8 +31,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "husky": "^7.0.0",
-    "prettier": "2.4.1",
-    "pretty-quick": "^3.1.2"
+    "prettier": "2.4.1"
   },
   "dependencies": {
     "sass": "^1.43.4"
