--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier-fix": "npx prettier --write .",
-    "prepare": "cd .. && husky install"
+    "prepare": "cd .. && husky install",
+    "watch": "gulp watch"
   },
   "repository": {
     "type": "git",
