--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-sass": "^5.0.0",
